// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PaymentMarkedCard > renders the incoming received variant for creator viewers 1`] = `
<div
  class="flex py-1 justify-start"
  data-testid="payment-marked-card"
>
  <div
    class="w-full max-w-[380px]"
  >
    <div
      class="flex items-center gap-2.5 rounded-2xl border border-success bg-muted p-3 transition-[background-color,border-color,box-shadow] duration-300"
    >
      <span
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-success text-success-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign size-[18px]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </span>
      <div
        class="min-w-0"
      >
        <div
          class="truncate text-xs font-semibold text-foreground"
        >
          Payment of $4,575.00 received
        </div>
        <div
          class="truncate text-xs text-muted-foreground"
        >
          YouTube Video · 8 may 2026
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMarkedCard > renders the outgoing sent variant for brand viewers 1`] = `
<div
  class="flex py-1 justify-end"
  data-testid="payment-marked-card"
>
  <div
    class="w-full max-w-[380px]"
  >
    <div
      class="flex items-center gap-2.5 rounded-2xl border border-success bg-muted p-3 transition-[background-color,border-color,box-shadow] duration-300"
    >
      <span
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-success text-success-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-[18px]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
      <div
        class="min-w-0"
      >
        <div
          class="truncate text-xs font-semibold text-foreground"
        >
          Payment of $4,575.00 sent
        </div>
        <div
          class="truncate text-xs text-muted-foreground"
        >
          YouTube Video · 8 may 2026
        </div>
      </div>
    </div>
  </div>
</div>
`;
